fixes social icons alignment

--- a/wip/styles/main.less
+++ b/wip/styles/main.less
@@ -230,7 +230,7 @@
   margin-top: 1rem;
   li{
     display: inline-block;
-    margin: 0 2px 8px;
+    margin: 0 2px 12px;
   }
 }
 
